# doc-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  server.py
tests/: test_scan.py  test_validate_structure.py
tools/: scan.py  validate_structure.py
