[project]
name = "doc-mcp-server"
version = "0.1.0"
description = "A lightweight MCP-style server for validating documentation structure and quality, designed to support contributor workflows and general documentation checks."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
]
authors = [
    { name = "yuka-with-data" }
]
keywords = ["mcp", "documentation", "doc", "validation", "tools"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
